Setting memory configuration manually
(still needs documentation - assumption: ~600MB cgroup mem limit)